# python-rock-paper-scissors

./: .flake8  .gitignore  README.md  REAME.md  pyproject.toml
src/app/: __main__.py
src/app/lib/: core_mng.py  ctx_game.py  data_collect.py  style_cli.py
src/app/lib/dev/: error.py
src/app/paperwork/: ctx.py  game_choice.py  reg.py  terminal_bol.py  types.py
