[project]
name = "app"
version = "1.0.0"
description = ""
authors = [
    {name = "AlexanderMatveev2908",email = "matveevalexander470@gmail.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "emoji (>=2.15.0,<3.0.0)"
]

packages = [
    { include = "app", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
ruff = "^0.14.5"

